--- a/students/liuminli.html
+++ b/students/liuminli.html
@@ -59,6 +59,29 @@
 	  <section class="student-section">
       <h2>实践经历 (Education)</h2>
       <div class="education-timeline">
+
+	       <div class="education-item">
+          <div class="education-period">江西省微藻资环技术技术产业有限公司 (2025.04-2025.08) 实习生 </div>
+          <div class="education-school">
+          1、参与微生物肥料的生产及技术开发；<br>
+          2、养殖水生植物，生物有机肥，土壤改良剂，化工产品等方面的研究工作；<br>
+          </div></div> 	  
+
+	       <div class="education-item">
+          <div class="education-period">武汉百翼生物科技有限公司 (2024.01-2025.01) 实习生 </div>
+          <div class="education-school">
+          1、学习企业文化，在企业进行参观实习；<br>
+          2、学习相关仪器(如质谱、液相、红外等）的工作原理及操作方法；<br>
+          3、学习基因工程的相关技术，学习蛋白电泳，降解速率、降解途径等相关实验技术；<br>
+      </div></div> 	 
+
+        <div class="education-item">
+          <div class="education-period">山东全中懿生物科技有限公司 (2023.02-2023.05) 中医药研发助理 </div>
+          <div class="education-school">
+		  1、负责中药的分类和采购；<br>
+          2、负责中医药活性物质的提取和功能研究；<br>
+      </div></div>
+
         <div class="education-item">
           <div class="education-period">山东陀承生物科技有限公司 (2022.5 - 2022.10) 接待员/研发员 </div>
           <div class="education-school">
@@ -66,21 +89,7 @@
           2、负责药品研发工作；<br>
           3、负责研发的药品的批号申请工作；<br>
       </div></div>
-	  
-        <div class="education-item">
-          <div class="education-period">山东全中懿生物科技有限公司 (2023.02-2023.05) 中医药研发助理 </div>
-          <div class="education-school">
-		  1、负责中药的分类和采购；<br>
-          2、负责中医药活性物质的提取和功能研究；<br>
-      </div></div>
-	  
-	       <div class="education-item">
-          <div class="education-period">武汉百翼生物科技有限公司 (2024.01-2025.01) 实习生 </div>
-          <div class="education-school">
-          1、学习企业文化，在企业进行参观实习；<br>
-          2、学习相关仪器(如质谱、液相、红外等）的工作原理及操作方法；<br>
-          3、学习基因工程的相关技术，学习蛋白电泳，降解速率、降解途径等相关实验技术；<br>
-      </div></div> 	  
+
 	  </div>
     </section>
 	
@@ -89,10 +98,14 @@
       <h2>获奖、成果与论文 (Awards, Achievements, and Publications)</h2>
       <div class="education-timeline">
         <div class="education-item">中国国际大学生创新大赛（2025）校级二等奖 </div>
-        <div class="education-item">校级二等奖学金（2024） </div>
-        <div class="education-item">英语四级（CET-4,2021） </div>
+        <div class="education-item">“向新求质 筑梦研华”研究生学术文化三等奖（2024） </div>
+        <div class="education-item">校级二等奖学金（2024） </div>		
+        <div class="education-item">优秀党员（2023） </div>
         <div class="education-item">连续两年获得校级“优秀学生”称号（2021，2022） </div>
+		<div class="education-item">大学生创新创业大赛校级一等奖（2022） </div>
         <div class="education-item">荣获校级优秀奖学金8次(本科)（2019-2023） </div>
+		<div class="education-item">英语四级证书（CET-4,2021） </div>
+
 	 	</div>
 		</section>
 		
