--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="teaching.html"><span class="nav-zh">教学与指导</span><br><span class="nav-en">Teaching</span></a></li>
       <li><a href="news.html"><span class="nav-zh">新闻与动态</span><br><span class="nav-en">News</span></a></li>
       <li><a href="gallery.html"><span class="nav-zh">实验室风采</span><br><span class="nav-en">Gallery</span></a></li>
+	  <li><a href="gallery.html"><span class="nav-zh">加入我们</span><br><span class="nav-en">Join Us</span></a></li>
     </ul>
   </nav>
 
@@ -65,6 +66,9 @@ By integrating experimental evolution, physiological and biochemical analyses, m
         <li><a href="https://www.nsfc.gov.cn" target="_blank">国家自然科学基金委员会 (NSFC)</a></li>
         <li><a href="https://kjt.shaanxi.gov.cn" target="_blank">陕西省科学技术厅（SPDST）</a></li>
         <li><a href="http://www.sust.edu.cn/" target="_blank">陕西科技大学（SUST）</a></li>
+		<li><a href="https://www.dal.ca/" target="_blank">戴尔豪斯大学（Dalhousie University）</a></li>
+		<li><a href="https://mta.ca/" target="_blank">蒙特爱立森大学（Mount Allison University）</a></li>
+		<li><a href="https://www.mmab.ca/" target="_blank">海洋微生物宏观生态学实验室（Marine Microbial Macroecology Lab）</a></li>			
       </ul>
     </div>
   </div>
@@ -165,24 +169,9 @@ By integrating experimental evolution, physiological and biochemical analyses, m
   <!-- ====== 页脚 ====== -->
 <!-- ====== 页脚 ====== -->
 <footer>
-  <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
-  <p>Designed by Zhengke</p>
-  <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
-    网站访问量(Website traffic): <span id="count-number">0</span> 次
-	点击：[<script>_showDynClicks("wbnews", 961973783, 7752)</script>]
-  </div>
+  <p>© 2025 Diatom Ecology & Adaptation & Evolution Lab (DEAEL) — Zhengke Li at SUST</p>
+  <p>Designed by Zhengke Li</p>
 </footer>
 
-<!-- ====== 访问次数统计脚本 ====== -->
-<script>
-  // 使用 CountAPI 统计访问量
-  // 这里的 "deael_lab_website" 可以自定义为唯一标识符
-  fetch('https://api.countapi.xyz/hit/deael_lab_website/visits')
-    .then(res => res.json())
-    .then(data => {
-      document.getElementById('count-number').innerText = data.value;
-    })
-    .catch(err => console.error('访问统计获取失败', err));
-</script>
 </body>
 </html>
