--- a/members.html
+++ b/members.html
@@ -128,9 +128,9 @@
     </a>
 
 
-    <a href="members/liyangyang.html" class="card-link">
+    <a href="members/yujinlei.html" class="card-link">
       <div class="student-card">
-        <img src="images/yujinlei.jpg" alt="李洋洋">
+        <img src="images/yujinlei.jpg" alt="余静蕾">
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
           <span class="name-zh">余静蕾</span><br>
@@ -162,7 +162,7 @@
       </div>
     </a>
 
-    <a href="members/liyangyang.html" class="card-link">
+    <a href="members/wangxin.html" class="card-link">
       <div class="student-card">
         <img src="images/xinwang.jpg" alt="王欣">
 
@@ -179,7 +179,7 @@
       </div>
     </a>
 
-    <a href="members/liyangyang.html" class="card-link">
+    <a href="members/zhoucengcang.html" class="card-link">
       <div class="student-card">
         <img src="images/cengcangzhou.jpg" alt="周晨璨">
 
@@ -196,7 +196,7 @@
       </div>
     </a>
 
-    <a href="members/liyangyang.html" class="card-link">
+    <a href="members/yangsimin.html" class="card-link">
       <div class="student-card">
         <img src="images/siminyang.jpg" alt="杨司敏">
         <!-- 中文名在上，英文名在下 -->
