--- a/members.html
+++ b/members.html
@@ -128,7 +128,7 @@
     </a>
 
 
-    <a href="members/yujinlei.html" class="card-link">
+    <a href="students/yujinlei.html" class="card-link">
       <div class="student-card">
         <img src="images/yujinlei.jpg" alt="余静蕾">
         <!-- 中文名在上，英文名在下 -->
@@ -144,7 +144,7 @@
       </div>
     </a>
 
-    <a href="members/liyangyang.html" class="card-link">
+    <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/liyangyang.jpg" alt="李洋洋">
 
@@ -162,7 +162,7 @@
       </div>
     </a>
 
-    <a href="members/wangxin.html" class="card-link">
+    <a href="students/wangxin.html" class="card-link">
       <div class="student-card">
         <img src="images/xinwang.jpg" alt="王欣">
 
@@ -179,7 +179,7 @@
       </div>
     </a>
 
-    <a href="members/zhoucengcang.html" class="card-link">
+    <a href="students/zhoucengcang.html" class="card-link">
       <div class="student-card">
         <img src="images/cengcangzhou.jpg" alt="周晨璨">
 
@@ -196,7 +196,7 @@
       </div>
     </a>
 
-    <a href="members/yangsimin.html" class="card-link">
+    <a href="students/yangsimin.html" class="card-link">
       <div class="student-card">
         <img src="images/siminyang.jpg" alt="杨司敏">
         <!-- 中文名在上，英文名在下 -->
@@ -221,7 +221,7 @@
   <h2>过去成员（Past Members）</h2>
   <div class="student-grid">
  
-    <a href="members/liyangyang.html" class="card-link">
+    <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/xiaojiaowang.jpg" alt="王晓娇">
         <!-- 中文名在上，英文名在下 -->
@@ -237,7 +237,7 @@
       </div>
     </a>
 
-     <a href="members/liyangyang.html" class="card-link">
+     <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/xinhongguo.jpg" alt="郭新红">
         <!-- 中文名在上，英文名在下 -->
@@ -253,7 +253,7 @@
       </div>
     </a>
 	
-	    <a href="members/liyangyang.html" class="card-link">
+	    <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/xiaojiaowang1.jpg" alt="王大玺">
         <!-- 中文名在上，英文名在下 -->
@@ -277,7 +277,7 @@
   <h2>合作成员（Collaborated students）</h2>
   <div class="student-grid">
  
-    <a href="members/liyangyang.html" class="card-link">
+    <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/xiaojiaowang.jpg" alt="王晓娇">
         <!-- 中文名在上，英文名在下 -->
@@ -293,7 +293,7 @@
       </div>
     </a>
 
-     <a href="members/liyangyang.html" class="card-link">
+     <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/xinhongguo.jpg" alt="郭新红">
         <!-- 中文名在上，英文名在下 -->
@@ -309,7 +309,7 @@
       </div>
     </a>
 	
-	    <a href="members/liyangyang.html" class="card-link">
+	    <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/xiaojiaowang1.jpg" alt="王大玺">
         <!-- 中文名在上，英文名在下 -->
