--- a/members.html
+++ b/members.html
@@ -113,7 +113,7 @@
 
     <a href="students/qinying.html" class="card-link">
       <div class="student-card">
-        <img src="images/qingying.jpg" alt="李洋洋">
+        <img src="images/qinying.jpg" alt="李洋洋">
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
           <span class="name-zh">秦莹</span><br>
