--- a/members.html
+++ b/members.html
@@ -211,6 +211,22 @@
         </p>
       </div>
     </a>
+	
+    <a href="students/guangxinyi.html" class="card-link">
+      <div class="student-card">
+        <img src="images/guangxinyi.jpg" alt="广昕毅">
+        <!-- 中文名在上，英文名在下 -->
+        <h3 class="student-name">
+          <span class="name-zh">广昕毅</span><br>
+          <span class="name-en">（XinYi Guang)</span>
+        </h3>
+        <!-- 学位中文在上，英文在下 -->
+        <p class="position">
+          <span class="pos-zh">本科生(2022-2026)</span><br>
+          <span class="pos-en">Bachelor's student</span>
+        </p>
+      </div>
+    </a>
 
   </div> <!-- student-grid 结束 -->
 </section>
