--- a/members.html
+++ b/members.html
@@ -237,7 +237,7 @@
   <h2>过去成员（Past Members）</h2>
   <div class="student-grid">
  
-    <a href="students/liyangyang.html" class="card-link">
+    <a href="students/xiaojiaowang.html" class="card-link">
       <div class="student-card">
         <img src="images/xiaojiaowang.jpg" alt="王晓娇">
         <!-- 中文名在上，英文名在下 -->
