--- a/members.html
+++ b/members.html
@@ -253,7 +253,7 @@
       </div>
     </a>
 
-     <a href="students/liyangyang.html" class="card-link">
+     <a href="students/xinhongguo.html" class="card-link">
       <div class="student-card">
         <img src="images/xinhongguo.jpg" alt="郭新红">
         <!-- 中文名在上，英文名在下 -->
@@ -269,9 +269,9 @@
       </div>
     </a>
 	
-	    <a href="students/liyangyang.html" class="card-link">
+	    <a href="students/wangdaxi.html" class="card-link">
       <div class="student-card">
-        <img src="images/xiaojiaowang1.jpg" alt="王大玺">
+        <img src="images/wangdaxi.jpg" alt="王大玺">
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
           <span class="name-zh">王大玺 </span><br>
