--- a/members.html
+++ b/members.html
@@ -243,7 +243,7 @@
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
           <span class="name-zh">王晓娇</span><br>
-          <span class="name-en">(Xiao Jiaowang)</span>
+          <span class="name-en">(Xiaojiao Wang)</span>
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
