--- a/members.html
+++ b/members.html
@@ -253,7 +253,7 @@
       </div>
     </a>
 
-     <a href="students/xinhongguo.html" class="card-link">
+     <a href="students/liyangyang.html" class="card-link">
       <div class="student-card">
         <img src="images/xinhongguo.jpg" alt="郭新红">
         <!-- 中文名在上，英文名在下 -->
@@ -269,18 +269,20 @@
       </div>
     </a>
 	
-	    <a href="students/wangdaxi.html" class="card-link">
+
+	
+	    <a href="students/liujiamin.html" class="card-link">
       <div class="student-card">
-        <img src="images/wangdaxi.jpg" alt="王大玺">
+        <img src="images/liujiamin.jpg" alt="刘佳敏">
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
-          <span class="name-zh">王大玺 </span><br>
-          <span class="name-en">(Daxi Wang)</span>
+          <span class="name-zh">刘佳敏 </span><br>
+          <span class="name-en">(Jiamin Liu)</span>
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生(2021-2024)</span><br>
-          <span class="pos-en">Master's student</span>
+          <span class="pos-zh">本科生(2019-2023)</span><br>
+          <span class="pos-en">Bachelor's student</span>
         </p>
       </div>
     </a>
@@ -293,8 +295,6 @@
   <h2>合作成员（Collaborated students）</h2>
   <div class="student-grid">
  
-
-	
 
   </div> <!-- student-grid 结束 -->
 </section>
