--- a/members.html
+++ b/members.html
@@ -18,6 +18,8 @@
       <li><a href="teaching.html"><span class="nav-zh">教学与指导</span><br><span class="nav-en">Teaching</span></a></li>
       <li><a href="news.html"><span class="nav-zh">新闻与动态</span><br><span class="nav-en">News</span></a></li>
       <li><a href="gallery.html"><span class="nav-zh">实验室风采</span><br><span class="nav-en">Gallery</span></a></li>
+	  <li><a href="gallery.html"><span class="nav-zh">加入我们</span><br><span class="nav-en">Join Us</span></a></li>
+
     </ul>
   </nav>
 
@@ -227,6 +229,38 @@
         </p>
       </div>
     </a>
+	
+	    <a href="students/helinxing.html" class="card-link">
+      <div class="student-card">
+        <img src="images/helinxing.jpg" alt="何林星">
+        <!-- 中文名在上，英文名在下 -->
+        <h3 class="student-name">
+          <span class="name-zh">何林星</span><br>
+          <span class="name-en">（Linxing He)</span>
+        </h3>
+        <!-- 学位中文在上，英文在下 -->
+        <p class="position">
+          <span class="pos-zh">本科生(2023-2027)</span><br>
+          <span class="pos-en">Bachelor's student</span>
+        </p>
+      </div>
+    </a>
+	
+	    <a href="students/mayizhuo.html" class="card-link">
+      <div class="student-card">
+        <img src="images/mayizhuo.jpg" alt="马懿卓">
+        <!-- 中文名在上，英文名在下 -->
+        <h3 class="student-name">
+          <span class="name-zh">马懿卓</span><br>
+          <span class="name-en">（Yizhuo Ma)</span>
+        </h3>
+        <!-- 学位中文在上，英文在下 -->
+        <p class="position">
+          <span class="pos-zh">本科生(2023-2027)</span><br>
+          <span class="pos-en">Bachelor's student</span>
+        </p>
+      </div>
+    </a>
 
   </div> <!-- student-grid 结束 -->
 </section>
@@ -253,7 +287,7 @@
       </div>
     </a>
 
-     <a href="students/liyangyang.html" class="card-link">
+     <a href="students/xinhongguo.html" class="card-link">
       <div class="student-card">
         <img src="images/xinhongguo.jpg" alt="郭新红">
         <!-- 中文名在上，英文名在下 -->
