--- a/teaching.html
+++ b/teaching.html
@@ -91,7 +91,8 @@ Bronze Award (University Level) Instructor, 8th China International "Internet+" 
 
 
   <footer>
-    <p>© 2025 Diatom Evolution & Adaptation Lab | Zhengke Li</p>
+  <p>© 2025 Diatom Ecology & Adaptation & Evolution Lab (DEAEL) — Zhengke Li at SUST</p>
+  <p>Designed by Zhengke Li</p>
   </footer>
 </body>
 </html>
