--- a/teaching.html
+++ b/teaching.html
@@ -53,6 +53,8 @@
       <h2>2. 教育与指导学生比赛获奖 | Teaching and Student Competition Instruction Awards</h2>
       <p>
 	<span class="lang">
+中国国际大学生创新大赛(2025)国家级 铜奖 指导老师<br>
+Bronze Award (National) Instructor, China International College Students Innovation Competition (2025)<br>	
 2025年度陕西科技大学“食光”桃李奖 最受欢迎老师<br>
 2025 Shaanxi University of Science and Technology "Shi Guang" Teaching Excellence Award - Most Popular Teacher<br>
 中国国际大学生创新大赛(2025)陕西赛区 金奖 指导老师<br>
