--- a/members.html
+++ b/members.html
@@ -336,7 +336,8 @@
 
 <!-- 页脚 -->
 <footer>
-    <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li</p>
+  <p>© 2025 Diatom Ecology & Adaptation & Evolution Lab (DEAEL) — Zhengke Li at SUST</p>
+  <p>Designed by Zhengke Li</p>
 </footer>
 
 <script src="js/lang.js"></script>
