--- a/publications.html
+++ b/publications.html
@@ -266,8 +266,10 @@
 
 
   <footer>
-    <p>© 2025 Diatom Evolution & Adaptation Lab | Zhengke Li</p>
+  <p>© 2025 Diatom Ecology & Adaptation & Evolution Lab (DEAEL) — Zhengke Li at SUST</p>
+  <p>Designed by Zhengke Li</p>
   </footer>
 </body>
 </html>
+
 
