--- a/members.html
+++ b/members.html
@@ -24,7 +24,6 @@
   </nav>
 
 <!-- Header -->
-
     <section class="page-header">
       <h1 data-en="团队成员（Our members）" data-zh="研究成果">团队成员（Our members）</h1>
       <p data-en="Selected research papers from our lab" data-zh="实验室精选研究成果"></p>
@@ -33,13 +32,32 @@
 <!-- 研究方向卡片 -->
 <!-- ===== 成员介绍页面 ===== -->
 
+
+
 <section class="profile-section">
-  <h2>课题组长（Principal Investigator）</h2>
-  <p>
-李政科，湖南桃江人，副教授，硕士生导师。2016年毕业于华中师范大学获植物学博士学位，2017-2021年在加拿大戴尔豪斯大学和蒙特爱丽森大学从事博士后研究。主要从事硅藻等浮游植物的适应性进化与资源开发利用研究，重点探索多倍化驱动的暖化适应机制、西藏高原藻类暖化和胁迫响应规律及机制、藻类资源可持续利用。目前已发表SCI论文36篇，其中第一作者/通讯作者15篇。论文主要发表在Nature Climate Change，New Phytologist （2篇）, The Plant Cell，Current Biology, Environmental Microbiology，Photosynthesis Research，Limnology and Oceanography，Journal of Phycology，Journal of Applied Phycology等本领域核心国际期刊。主持国家自然科学基金面上和青年项目、省重点研发项目，参与加拿大NSERC、美国西蒙斯基金会等项目。现任陕西省农业工程学会理事，担任多个SCI期刊审稿人，指导学生获多个大赛奖项。
-  </p>
-  <p>Zhengke Li, an associate professor and master's supervisor from Taojiang, Hunan, earned his Ph.D. in Botany from Central China Normal University in 2016 and conducted postdoctoral research at Canada's Dalhousie University and Mount Allison University from 2017 to 2021. His research focuses on the adaptive evolution and resource utilization of phytoplankton, particularly diatoms, with specific interests in polyploidy-driven thermal adaptation mechanisms, algal responses to warming and environmental stress on the Tibetan Plateau, and sustainable algal resource development. To date, he has published 36 SCI papers, including 15 as first or corresponding author, in leading international journals such as Nature Climate Change, New Phytologist (two papers), The Plant Cell, Current Biology, Environmental Microbiology, Photosynthesis Research, Limnology and Oceanography, Journal of Phycology, and Journal of Applied Phycology. He has presided over projects including the National Natural Science Foundation of China General and Youth Programs and provincial key R&D projects, while also participating in international collaborations funded by Canada's NSERC and the Simons Foundation in the US. Currently serving as a council member of the Shaanxi Society of Agricultural Engineering and a reviewer for multiple SCI journals, he has mentored students to win numerous awards in prestigious competitions.</p>
-<br>  
+    <h2>课题组长（Principal Investigator）</h2>
+    
+    <!-- 使用Flex容器实现左图右文 -->
+    <div class="profile-container">
+        <div class="profile-image">
+            <img src="images/zhengkeli.jpg" alt="李政科">
+            <p class="contact">
+                邮箱 (Email): <a href="mailto:zkli@sust.edu.cn">zkli@sust.edu.cn</a><br>
+				邮箱 (Email): <a href="mailto:zkli@dal.ca">zkli@dal.ca</a>
+            </p>
+        </div>
+        <div class="profile-content">
+            <p>
+                李政科，湖南桃江人，副教授，硕士生导师。2016年毕业于华中师范大学获植物学博士学位，2017-2021年在加拿大戴尔豪斯大学和蒙特爱丽森大学从事博士后研究。主要从事硅藻等浮游植物的适应性进化与资源开发利用研究，重点探索多倍化驱动的暖化适应机制、西藏高原藻类暖化和胁迫响应规律及机制、藻类资源可持续利用。目前已发表SCI论文36篇，其中第一作者/通讯作者15篇。论文主要发表在Nature Climate Change，New Phytologist （2篇）, The Plant Cell，Current Biology, Environmental Microbiology，Photosynthesis Research，Limnology and Oceanography，Journal of Phycology，Journal of Applied Phycology等本领域核心国际期刊。主持国家自然科学基金面上和青年项目、省重点研发项目，参与加拿大NSERC、美国西蒙斯基金会等项目。现任陕西省农业工程学会理事，担任多个SCI期刊审稿人，指导学生获多个省及国家级大赛奖项。
+            </p>
+            <p>
+                Zhengke Li, an associate professor and master's supervisor from Taojiang, Hunan, earned his Ph.D. in Botany from Central China Normal University in 2016 and conducted postdoctoral research at Canada's Dalhousie University and Mount Allison University from 2017 to 2021. His research focuses on the adaptive evolution and resource utilization of phytoplankton, particularly diatoms, with specific interests in polyploidy-driven thermal adaptation mechanisms, algal responses to warming and environmental stress on the Tibetan Plateau, and sustainable algal resource development. To date, he has published 36 SCI papers, including 15 as first or corresponding author, in leading international journals such as Nature Climate Change, New Phytologist (two papers), The Plant Cell, Current Biology, Environmental Microbiology, Photosynthesis Research, Limnology and Oceanography, Journal of Phycology, and Journal of Applied Phycology. He has presided over projects including the National Natural Science Foundation of China General and Youth Programs and provincial key R&D projects, while also participating in international collaborations funded by Canada's NSERC and the Simons Foundation in the US. Currently serving as a council member of the Shaanxi Society of Agricultural Engineering and a reviewer for multiple SCI journals, he has mentored students to win numerous awards in prestigious competitions.
+            </p>
+        </div>
+    </div>
+</section>
+
+
     <h2>教育背景及工作经历（Educational Background and Work Experience）</h2>
 <p>
 2021.04–至今，陕西科技大学，副教授<br>2021.04–present: Associate Professor, Shaanxi University of Science and Technology<br>
@@ -81,10 +99,6 @@
     <a href="https://xueshu.baidu.com/scholarID/CN-BLIV5F6K" class="link-btn rg" target="_blank">
     <i class="fa-brands fa-researchgate"></i> Baidu Scholar
   </a>
-
-  
-  
-  
 </div>
 
 </p>
