--- a/members.html
+++ b/members.html
@@ -317,7 +317,21 @@
       </div>
     </a>
 	
-
+	    <a href="students/daxiwang.html" class="card-link">
+      <div class="student-card">
+        <img src="images/daxiwang.jpg" alt="王大玺">
+        <!-- 中文名在上，英文名在下 -->
+        <h3 class="student-name">
+          <span class="name-zh">王大玺</span><br>
+          <span class="name-en">(Daxi Wang)</span>
+        </h3>
+        <!-- 学位中文在上，英文在下 -->
+        <p class="position">
+          <span class="pos-zh">硕士研究生(2021-2024)</span><br>
+          <span class="pos-en">Master's student</span>
+        </p>
+      </div>
+    </a>
 	
 	    <a href="students/liujiamin.html" class="card-link">
       <div class="student-card">
