--- a/joinus.html
+++ b/joinus.html
@@ -37,7 +37,7 @@
       <h2>1. 研究生招生 | Graduate Student Recruitment </h2>
       <p>
 	<span class="lang">
-	我们实验室致力于全球变化生物学、微藻肥及藻类代谢物开发等前沿方向的研究，每年计划招收2-3名具备科研潜力的硕士研究生。我们期待藻类对全球变化的生物学响应与调控机制，对藻类资源利用等具有浓厚兴趣的青年学子加入，共同探索科学未知。<br><br>
+	我们实验室致力于全球变化生物学、微藻肥及藻类代谢物开发等前沿方向的研究，每年计划招收2-3名具备科研潜力的硕士研究生。我们期待对：藻类对全球变化的响应与调控机制，或对藻类资源利用等具有浓厚兴趣的青年学子加入，共同探索科学未知。<br><br>
 	<strong>研究方向：</strong><br>
 	●全球变化背景下的藻类生理生态响应机制<br>
     ●微藻肥在可持续农业中的应用潜力与作用机理<br>
@@ -49,9 +49,9 @@
     ●自由的学术氛围： 我们支持学生在导师指导下自主探索感兴趣的方向，并提供参加学术会议、合作交流等成长机会。<br>
 <br>
 	<strong>申请要求：</strong><br>
-    ●拥有生物与医药、生态学、微生物学、生物技术、环境科学食品等相关专业的学士学位。<br>
+    ●拥有生物与医药、生态学、微生物学、生物技术、环境科学、食品等相关专业的学士学位。<br>
     ●具备良好的逻辑思维与自主学习能力，对科学研究有热情与恒心。<br>
-    ●具有微生物培养、分子生物学、化学分析或数据处理经验者优先考虑。<br>
+    ●具有微生物培养、分子生物学、生化分析或数据处理经验者优先考虑。<br>
 <br>	
 	<strong>申请方式:</strong>请将以下材料发送至李政科邮箱（zkli@sust.edu.cn）：<br>
     ●个人简历（包括教育背景、科研经历、技能特长等）<br>
@@ -65,7 +65,7 @@
       <h2>2. 本科生科研实践机会 | Undergraduate Research Opportunities </h2>
       <p>
 	<span class="lang">
-	我们实验室长期面向各年级本科生开放，提供多元化的科研实践平台。我们鼓励学生基于个人兴趣，通过室内实验、或数据挖掘等多种方式，探索藻类多样性、全球变化等生态学、藻类资源开发与利用等前沿问题。<br>
+	我们实验室长期面向各年级本科生开放，提供多元化的科研实践平台。我们鼓励学生基于个人兴趣，通过室内实验或数据挖掘等多种方式，探索藻类多样性、全球变化等生态学、藻类资源开发与利用等前沿问题。<br>
 	<br>
 	<strong>你可以在这里：</strong><br>
 	●开展自主科研项目：在导师与研究生指导下，从提出科学问题开始，完整经历实验设计、数据收集、分析与成果总结的全过程。<br>
