--- a/students/liuminli.html
+++ b/students/liuminli.html
@@ -18,6 +18,7 @@
       <li><a href="../teaching.html"><span class="nav-zh">教学与指导</span><br><span class="nav-en">Teaching</span></a></li>
       <li><a href="../news.html"><span class="nav-zh">新闻与动态</span><br><span class="nav-en">News</span></a></li>
       <li><a href="../gallery.html"><span class="nav-zh">实验室风采</span><br><span class="nav-en">Gallery</span></a></li>
+	  <li><a href="../joinus.html"><span class="nav-zh">加入我们</span><br><span class="nav-en">Join Us</span></a></li>
     </ul>
   </nav>
 
